--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.1",
     "styled-components": "^5.3.6",
     "typescript": "4.9.5",
     "yup": "^0.32.11"
@@ -41,6 +40,8 @@
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
+    "babel-plugin-import": "^1.13.6",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
